# wordle-util

./: Cargo.toml  Justfile  LICENSE  README.md  index.html
.github/workflows/: deploy.yml
.zed/: settings.json
public/: style.scss
src/: letters.rs  main.rs  solver.rs
src/components/: mod.rs  settings.rs
src/components/board/: board.rs  mod.rs  row.rs  tile.rs
src/components/keyboard/: key.rs  keyboard.rs  mod.rs  row.rs
